syntax = "proto3";

option java_multiple_files = true;
option java_package = "o2sgrpc.service";
option java_outer_classname = "DeviceProto";
option objc_class_prefix = "HLW";
option go_package = "o2sgrpc/service";

package o2sgrpc.service;

// The Device service definition.
service Device {
    // Sends a device
    rpc GetDevice (DeviceRequest) returns (DeviceItem) {}
    rpc GetDevices (DeviceRequest) returns (DevicesResponse) {}
}

// The request message containing the env's name.
message DeviceRequest {
    int32 env_id = 1;
}

// The response message containing the device details
message DeviceItem {
    int32 id = 1;
    string device_host = 2;
}

message DevicesResponse {
    repeated DeviceItem devices = 1;
}
